Menu qui ne s affichait pas, corrigé, commentaires

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                         <li ><a class="scroll hvr-underline-from-left" id="experience" href="#" >Expériences</a ></li >
                         <li ><a class="scroll hvr-underline-from-left" id="work" href="#" >Réalisations</a ></li >
                     </ul >
-                </nav >
-<!--                 <nav class="hidden-lg-up" >
-    <ul >
-        <li ><a href="#" ><img class="menu" src="img/site/menu.svg" alt="menu.svg" ></a ></li >
-    </ul >
-</nav > -->
+                </nav >  
+                <nav class="hidden-lg-up" >
+                    <ul >
+                        <li ><a href="#" ><img class="menu" src="img/site/menu.svg" alt="menu.svg" ></a ></li >
+                    </ul >
+                </nav > 
             </div >
         </div >
         <h1 class="catchPhrase" >Je suis <span id="word" >curieux</span ></h1 >
@@ -93,10 +93,11 @@
                 </div >
             </div >
            <!-- 
-                PHOTO A AJOUTER
+            PHOTO A AJOUTER DANS LE FUTUR
            <div class="col-6 hidden-md-down" >
                 <img class="picture" src="" alt="Photo" >
-            </div >-->
+            </div >
+            -->
         </div >
     </div >
 </section >
@@ -110,11 +111,11 @@
         <div class="row" >
             <!--Competence HTML,CSS-->
             <div class="flex col-12 col-lg-6" >
-                <div class="percent" >95%</div >
+                <div class="percent" >90%</div >
                 <div class="progress-container" >
                     <strong >HTML, CSS</strong >
                     <div class="progress" >
-                        <div class="progress-bar" style="width: 95%;" ></div >
+                        <div class="progress-bar" style="width: 90%;" ></div >
                     </div >
                 </div >
             </div >
@@ -130,11 +131,21 @@
             </div >
             <!--Competence Git-->
             <div class="flex col-12 col-lg-6" >
-                <div class="percent" >65%</div >
+                <div class="percent" >70%</div >
                 <div class="progress-container" >
                     <strong >Git</strong >
                     <div class="progress" >
-                        <div class="progress-bar" style="width: 65%;" ></div >
+                        <div class="progress-bar" style="width: 70%;" ></div >
+                    </div >
+                </div >
+            </div >
+            <!--Competence Bootstrap, Flexbox-->
+            <div class="flex col-12 col-lg-6" >
+                <div class="percent" >40%</div >
+                <div class="progress-container" >
+                    <strong >Flexbox, Bootstrap</strong >
+                    <div class="progress" >
+                        <div class="progress-bar" style="width: 40%;" ></div >
                     </div >
                 </div >
             </div >
@@ -267,7 +278,7 @@
     <div class="container" >
         <h2 >Mes réalisations</h2 >
         <hr >
-        <p >Oups, il n'y a pas grand chose par ici.</p >
+        <p >Oups, il n'y a pas grand chose par ici pour le moment.</p >
         <div class="row" >
         </div >
     </div >
@@ -276,7 +287,7 @@
 <!--Footer-->
 <footer >
     <div class="container" >
-        <p >Copyright Etienne Blanc-Coquand - All right reserved</p >
+        <p >Copyright Etienne Blanc-Coquand © - All right reserved</p >
         <ul >
             <li >Suivez-moi sur :</li >
             <li ><a href="https://twitter.com/bcetienne" >Twitter - </a ></li >
