Suppression de la page + redirection vers nouvelle

--- a/index.html
+++ b/index.html
@@ -1,306 +1,32 @@
 <!doctype html>
-<html lang="fr" >
-<head >
-    <meta charset="UTF-8" >
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" >
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Muli:300,400,700i%7CPridi:300,400,700%7CRoboto:300,400,700,900" >
+    href="https://fonts.googleapis.com/css?family=Muli:300,400,700i%7CPridi:300,400,700%7CRoboto:300,400,700,900" >
     <!--%7C = | for google fonts-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
-          integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous" >
+    integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous" >
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-          rel="stylesheet" >
+    rel="stylesheet" >
     <link rel="icon" href="img/site/ic_portrait_black_24px.ico" >
     <link rel="stylesheet" href="css/style.css" >
     <title >Etienne Blanc-Coquand</title >
-</head >
-<body >
-<!--Header-->
-<div class="navbar-responsive" >
-    <nav >
-        <ul >
-            <li ><a href="#" class="scroll" id="about0" >A propos</a ></li >
-            <li ><a href="#" class="scroll" id="skill0" >Compétences</a ></li >
-            <li ><a href="#" class="scroll" id="experience0" >Expériences</a ></li >
-            <li ><a href="#" class="scroll" id="work0" >Réalisations</a ></li >
-        </ul >
-    </nav >
-</div >
-<header >
-    <div class="container" >
-        <div class="logoNavBar row" >
-            <div class="logo col-9 col-lg-6" >
-                <h1 >ETIENNE <span >Blanc-Coquand</span ></h1 >
-                <hr >
-                <!--<h2 >Web, Design</h2 >-->
-            </div >
-            <div class="navbar col-3 col-lg-6" >
-                <nav class="hidden-md-down" >
-                    <ul >
-                        <li ><a class="scroll hvr-underline-from-left" id="about" href="#" >A propos</a ></li >
-                        <li ><a class="scroll hvr-underline-from-left" id="skill" href="#" >Compétences</a ></li >
-                        <li ><a class="scroll hvr-underline-from-left" id="experience" href="#" >Expériences</a ></li >
-                        <li ><a class="scroll hvr-underline-from-left" id="work" href="#" >Réalisations</a ></li >
-                    </ul >
-                </nav >  
-                <nav class="hidden-lg-up" >
-                    <ul >
-                        <li ><a href="#" ><img class="menu" src="img/site/menu.svg" alt="menu.svg" ></a ></li >
-                    </ul >
-                </nav > 
-            </div >
-        </div >
-        <h1 class="catchPhrase" >Je suis <span id="word" >curieux</span ></h1 >
-        <a class="scroll down-arrow" id="aboutDownArrow" href="#" ><img src="img/site/down-arrow.svg" alt="down" ></a >
-    </div >
-</header >
-
-<!--A propos-->
-<section class="about about0 aboutDownArrow" >
-    <div class="container" >
-        <div class="row" >
-            <div class="col-12 col-lg-6" >
-                <h2 class="text-lg-left" >Faisons connaissance</h2 >
-                <hr class="mx-lg-0" >
-                <h3 ><strong >ETIENNE Blanc-Coquand</strong >, Developpeur</h3 >
-                <p >Bonjour et bienvenue sur ma page de présentation.
-                    <br >Je me présente, Etienne Blanc-Coquand, j'ai 20 ans, je viens des montagnes de la Savoie,
-                    paradis du ski et du snowboard, j'ai commencé ma plongée dans l'inconnu de
-                    l'informatique par un bac professionnel SEN à Saint-Jean-de-Maurienne où j'ai appris la base de
-                    l'informatique en général et où je me suis spécialisé dans les réseaux, télécommunications,
-                    audiovisuel et alarmes durant 3 ans.
-                    <br >Suite à cela j'ai enchainé mes études sur un BTS SIO option SLAM à Grenoble où je me suis
-                    spécialisé dans la programmation logicielle et web durant 2 ans.
-                    <br >Dorénavent je suis mes envies, après avoir vu le plus de choses en informatique durant 5 ans,
-                    je sais que je veux faire de développeur web mon métier, c'est pour cela que je vais faire des
-                    études sur Lyon pour décrocher un diplôme de Développeur Web Fullstack sur 2 ans.
-                    <br >Ce qui m'attire plus particulièrement dans ce domaine c'est le fait que tout se réinvente et
-                    s'améliore avec le temps, de toujours apprendre et de toujours être surpris par les avancées.
-                    <br >
-                    <br >Je vous souhaite une agréable visite.</p >
-                <ul >
-                    <li >Nom : BLANC-COQUAND Etienne</li >
-                    <li >Mail : <a href="mailto:etienne1296pro@gmail.com" >etienne1296pro@gmail.com</a ></li >
-                    <li >Tel : +33 (0)6 44 81 42 27</li >
-                </ul >
-                <div class="social-networks text-lg-left" >
-                    <a href="https://twitter.com/bcetienne" target="_blank" ><img src="img/site/twitter-3.svg"
-                                                                                  alt="Twitter" ></a ><!--
-                    --><a href="https://www.linkedin.com/in/etienne-blanc-coquand-32b483b1/" target="_blank" ><img
-                        src="img/site/linkedin-icon.svg" alt="LinkedIn" ></a ><!--
-                    --><a href="https://plus.google.com/u/0/115280005967073431560" target="_blank" ><img
-                        src="img/site/google-plus-2.svg" alt="Google+" ></a >
-                </div >
-            </div >
-           <!-- 
-            PHOTO A AJOUTER DANS LE FUTUR
-           <div class="col-6 hidden-md-down" >
-                <img class="picture" src="" alt="Photo" >
-            </div >
-            -->
-        </div >
-    </div >
-</section >
-
-<!--Competences-->
-<section class="skill skill0" >
-    <div class="container" >
-        <h2 >Mes compétences</h2 >
-        <hr >
-        <p >Mes compétences actuelles en développement web.</p >
-        <div class="row" >
-            <!--Competence HTML,CSS-->
-            <div class="flex col-12 col-lg-6" >
-                <div class="percent" >90%</div >
-                <div class="progress-container" >
-                    <strong >HTML, CSS</strong >
-                    <div class="progress" >
-                        <div class="progress-bar" style="width: 90%;" ></div >
-                    </div >
-                </div >
-            </div >
-            <!--Comptence PHP-->
-            <div class="flex col-12 col-lg-6" >
-                <div class="percent" >70%</div >
-                <div class="progress-container" >
-                    <strong >PHP</strong >
-                    <div class="progress" >
-                        <div class="progress-bar" style="width: 70%;" ></div >
-                    </div >
-                </div >
-            </div >
-            <!--Competence Git-->
-            <div class="flex col-12 col-lg-6" >
-                <div class="percent" >70%</div >
-                <div class="progress-container" >
-                    <strong >Git</strong >
-                    <div class="progress" >
-                        <div class="progress-bar" style="width: 70%;" ></div >
-                    </div >
-                </div >
-            </div >
-            <!--Competence Bootstrap, Flexbox-->
-            <div class="flex col-12 col-lg-6" >
-                <div class="percent" >40%</div >
-                <div class="progress-container" >
-                    <strong >Flexbox, Bootstrap</strong >
-                    <div class="progress" >
-                        <div class="progress-bar" style="width: 40%;" ></div >
-                    </div >
-                </div >
-            </div >
-            <!--Competence SQL-->
-            <div class="flex col-12 col-lg-6" >
-                <div class="percent" >80%</div >
-                <div class="progress-container" >
-                    <strong >MySQL</strong >
-                    <div class="progress" >
-                        <div class="progress-bar" style="width: 80%;" ></div >
-                    </div >
-                </div >
-            </div >
-        </div >
-        <div class="section02" >
-            <h2 >Langues parlées</h2 >
-            <hr >
-        </div >
-        <div class="row" >
-            <!--Langue01-->
-            <div class="flex col-12 col-lg-6" >
-                <div class="progress-container" >
-                    <strong >Français (Maternelle)</strong >
-                    <div class="progress" >
-                        <div class="progress-bar" style="width: 100%;" ></div >
-                    </div >
-                </div >
-            </div >
-            <!--Langue02-->
-            <div class="flex col-12 col-lg-6" >
-                <div class="progress-container" >
-                    <strong >Anglais (Technique)</strong >
-                    <div class="progress" >
-                        <div class="progress-bar" style="width: 60%;" ></div >
-                    </div >
-                </div >
-            </div >
-            <!--Langue03-->
-            <div class="flex col-12 col-lg-6" >
-                <div class="progress-container" >
-                    <strong >Italien (Scolaire)</strong >
-                    <div class="progress" >
-                        <div class="progress-bar" style="width: 25%;" ></div >
-                    </div >
-                </div >
-            </div >
-        </div >
-    </div >
-</section >
-
-<!--Experiences-->
-<section class="experience experience0" >
-    <div class="container" >
-        <h2 >Mes expériences professionnelles</h2 >
-        <hr >
-        <div class="row" >
-            <div class="hvr-grow col12 col-xl-6" >
-                <article >
-                    <div class="period" >Janv. à Fév. 2017</div >
-                    <h3 >Développeur web</h3 >
-                    <h4 >Jean Lain Automobiles</h4 >
-                    <p >Développement, maintenance et adaptation d'un système de ticket. <br >
-                        Rédaction d'un cahier des charges.</p >
-                </article >
-            </div >
-            <div class="hvr-grow col12 col-xl-6" >
-                <article >
-                    <div class="period" >Juin 2016</div >
-                    <h3 >Développeur web</h3 >
-                    <h4 >Jean Lain Automobiles</h4 >
-                    <p >Redéveloppement en application web d'un logiciel de gestion de stock, de base sous Access, pour
-                        accélérer la gestion et la fiabilité de celui-ci.</p >
-                </article >
-            </div >
-            <div class="hvr-grow col12 col-xl-6" >
-                <article >
-                    <div class="period" >Sep. à Nov. 2014</div >
-                    <h3 >Technicien réseaux</h3 >
-                    <h4 >Trimet France</h4 >
-                    <p >Configuration de bornes radios et récupération d'informations sur des bornes DECT pour
-                        potentiellement voir les soucis et sauver des employés de
-                        l'usine qui sont en dangers permanent. <br >
-                        Configuration et maintenance de matériels réseaux (switch, bornes wifi). <br >
-                        Modifications de lignes téléphoniques.</p >
-                </article >
-            </div >
-            <div class="hvr-grow col12 col-xl-6" >
-                <article >
-                    <div class="period" >Fév. 2014</div >
-                    <h3 >Technicien réseaux</h3 >
-                    <h4 >Trimet France</h4 >
-                    <p >Configuration et maintenance de matériels réseaux (switchs, bornes WiFi) dans l'optique
-                        d'optimiser le réseau, sa vitesse et corriger les défaillances.</p >
-                </article >
-            </div >
-            <div class="hvr-grow col12 col-xl-6" >
-                <article >
-                    <div class="period" >Fév. 2014</div >
-                    <h3 >Technicien réseaux</h3 >
-                    <h4 >Jean Lain Automobiles</h4 >
-                    <p >Dépannage de matériels professionnels, mise en place d'un nouveau proxy, finalisation du
-                        développement d'un site internet avec Joomla.</p >
-                </article >
-            </div >
-            <div class="hvr-grow col12 col-xl-6" >
-                <article >
-                    <div class="period" >Mai à Juin 2013</div >
-                    <h3 >Technicien</h3 >
-                    <h4 >France FPS</h4 >
-                    <p >Dépannage d'ordinateurs pour professionnels et particuliers (logiciel et matériel) et de
-                        périphériques divers.</p >
-                </article >
-            </div >
-        </div >
-        <div class="section02" >
-            <h2 >Mes autres expériences professionnelles</h2 >
-            <hr >
-            <ul >
-                <li ><a href="http://www.tourisme-la-chambre.com/fr/saint-avre.html" target="_blank" >Technicien de surface - </a ></li >
-                <li ><a href="https://www.tripadvisor.fr/Restaurant_Review-g608818-d1339349-Reviews-Les_Deux_Mazots-La_Lechere_Savoie_Auvergne_Rhone_Alpes.html" target="_blank" >Serveur - </a ></li >
-                <li ><a href="https://www.laposte.fr/" target="_blank" >Facteur - </a ></li >
-                <li ><a href="http://www.intersport.fr/" target="_blank" >Préparateur vélo et mises en rayons</a ></li >
-            </ul >
-        </div >
-    </div >
-</section >
-
-<!--Realisations-->
-<section class="work" >
-    <div class="container" >
-        <h2 >Mes réalisations</h2 >
-        <hr >
-        <p >Oups, il n'y a pas grand chose par ici pour le moment.</p >
-        <div class="row" >
-        </div >
-    </div >
-</section >
-
-<!--Footer-->
-<footer >
-    <div class="container" >
-        <p >Copyright Etienne Blanc-Coquand © - All right reserved</p >
-        <ul >
-            <li >Suivez-moi sur :</li >
-            <li ><a href="https://twitter.com/bcetienne" >Twitter - </a ></li >
-            <li ><a href="https://www.linkedin.com/in/etienne-blanc-coquand-32b483b1/" >LinkedIn - </a ></li >
-            <li ><a href="https://plus.google.com/u/0/115280005967073431560" >Google+</a ></li >
-            <li ><a style="display: none" target="_blank"
-                    href="https://www.vexels.com/vectors/preview/137283/google-icon-logo" ></a ></li >
-        </ul >
-    </div >
-</footer >
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" ></script >
-<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js" ></script >
-<script src="js/lightbox.min.js" ></script >
-<script src="js/ebc.js" ></script >
-</body >
-</html >
+</head>
+<body>
+    <section>
+        <div class="logo col-9 col-lg-6">
+        <h1>Zut, vous avez raté cette page lorsqu'elle était sur les internets...</h1>
+        <h2>Elle a juste changé de place, vous pouvez toujours la retrouver <a href="http://bcetienne.fr">ici</a>.</h2>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <p style="bottom: 0">Copyright Etienne Blanc-Coquand © - All right reserved</p>
+        </div>
+    </footer>
+</body>
+</html>
